--- a/index.html
+++ b/index.html
@@ -4,236 +4,254 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lakwa Hospital Obra – लकवा अस्पताल, डॉ. चंदन कुमार</title>
-
-  <meta name="description"
-        content="Lakwa Hospital Obra, Dr. Chandan Kumar – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना एवं न्यूरो सम्बंधित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।" />
-  <meta name="keywords"
-        content="Lakwa Hospital Obra, लकवा अस्पताल ओबरा, Dr Chandan Kumar Obra, paralysis treatment Obra, neuro hospital Obra, Aurangabad Bihar" />
-  <meta name="robots" content="index, follow" />
-
-  <!-- Google Font -->
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" />
-
-  <!-- CSS -->
+  <meta name="description" content="Lakwa Hospital Obra – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि का विशेष उपचार 24×7 उपलब्ध।" />
   <link rel="stylesheet" href="style.css" />
-
-  <!-- JS -->
-  <script defer src="main.js"></script>
 </head>
 <body>
 
-  <!-- TOP BLACK STRIP -->
-  <div class="top-bar">
-    <div>Lakwa Hospital Obra – लकवा अस्पताल, ओबरा (औरंगाबाद, बिहार)</div>
-    <div>आपातकालीन सहायता: <a href="tel:+919771737437" class="top-bar-link">+91 97717 37437</a></div>
+  <!-- 🔵 TOP INFO BAR -->
+  <div class="top-info-bar">
+    <div class="top-info-text">
+      Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)
+    </div>
+    <a href="tel:+919771737437" class="top-info-phone">+91 97717 37437</a>
   </div>
 
-  <!-- MAIN NAV (3D logo + hamburger) -->
-  <nav class="main-nav">
-    <div class="main-nav-left">
+  <!-- 🟣 HEADER + LOGO + BURGER -->
+  <header class="main-header">
+    <div class="logo-area">
       <div class="logo-3d">LH</div>
-      <div class="main-nav-logo-text">Lakwa Hospital Obra</div>
+      <div class="logo-text-block">
+        <div class="logo-title">Lakwa Hospital Obra</div>
+        <div class="logo-subtitle">लकवा अस्पताल, ओबरा, बिहार</div>
+      </div>
     </div>
 
-    <button class="nav-toggle" aria-label="Toggle menu" onclick="toggleMenu()">
+    <!-- hamburger -->
+    <button class="nav-toggle" onclick="toggleMenu()" aria-label="Toggle navigation">
       <span></span>
       <span></span>
       <span></span>
     </button>
+  </header>
 
+  <!-- 🟢 NAV BAR (MENU BAR) -->
+  <nav class="main-nav">
     <div class="main-nav-links" id="navLinks">
-      <a href="#facility">Services</a>
-      <a href="#about-us">About Us</a>
-      <a href="#contact-us">Contact Us</a>
+      <a href="#services">Services</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#contact">Contact Us</a>
+      <a href="#about">About Us</a>
       <a href="#privacy-policy">Privacy Policy</a>
       <a href="#disclaimer">Disclaimer</a>
+      <a href="#location">Location</a>
     </div>
   </nav>
 
-  <!-- HERO -->
-  <header class="hero">
-    <img src="doctorphoto.png"
-         alt="Dr. Chandan Kumar – Lakwa Hospital Obra" />
+  <!-- 🌤 HERO SECTION (Doctor) -->
+  <section class="hero">
+    <div class="hero-inner">
+      <div class="hero-photo-wrap">
+        <img src="doctorphoto.png" alt="डॉ. चंदन कुमार - Lakwa Hospital Obra" class="doctor-photo" />
+      </div>
 
-    <div class="hospital-name">लकवा अस्पताल</div>
-    <div class="doctor-name">डॉ. चंदन कुमार</div>
+      <div class="hero-text">
+        <h1 class="hospital-name">लकवा अस्पताल</h1>
+        <h2 class="doctor-name">डॉ. चंदन कुमार</h2>
+        <p class="doctor-qual">
+          M.B.E.H (Patna) – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना एवं न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।
+        </p>
+        <p class="hero-sub">
+          लकवा तथा नसों से सम्बन्धित रोगों के लिए विशेष उपचार उपलब्ध, आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष, मरीज एवं साथ-आने वाले परिजनों के लिए सुविधाजनक व्यवस्था।
+        </p>
 
-    <p>
-      M.B.E.H (Patna) – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना एवं न्यूरो सम्बंधित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।
-    </p>
-    <p>
-      लकवा तथा नसों से सम्बंधित रोगों के लिए विशेष उपचार उपलब्ध, आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष,
-      मरीज तथा साथ-आने वाले परिजनों के लिए सुविधाजनक व्यवस्था।
-    </p>
+        <ul class="hero-badges">
+          <li>✔ विशेष लकवा उपचार</li>
+          <li>✔ अनुभवी डॉक्टर</li>
+          <li>✔ आपातकालीन सुविधाएँ</li>
+        </ul>
 
-    <div class="hero-badges">
-      ✔ विशेष लकवा उपचार &nbsp;&nbsp; ✔ अनुभवी डॉक्टर &nbsp;&nbsp; ✔ आपातकालीन सुविधाएँ
+        <div class="hero-actions">
+          <button class="btn-primary" onclick="callNow()">📞 अभी कॉल करें</button>
+          <button class="btn-outline" onclick="scrollToAppointment()">📅 ऑनलाइन अपॉइंटमेंट बुक करें</button>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <div class="hero-actions">
-      <button class="btn-primary" onclick="callNow()">📞 अभी कॉल करें</button>
-      <button class="btn-outline" onclick="scrollToAppointment()">📅 ऑनलाइन अपॉइंटमेंट बुक करें</button>
-    </div>
-  </header>
-
-  <main>
-
-    <!-- STATS -->
-    <section class="card stats-card">
+  <!-- 📊 STATS -->
+  <section class="card stats-card">
+    <div class="stats-grid">
       <div class="stat-box">
         <div class="stat-number">10+</div>
-        <div>सालों का अनुभव</div>
+        <div class="stat-label">सालों का अनुभव</div>
       </div>
       <div class="stat-box">
         <div class="stat-number">5000+</div>
-        <div>सफल उपचार</div>
+        <div class="stat-label">सफल उपचार</div>
       </div>
       <div class="stat-box">
         <div class="stat-number">24×7</div>
-        <div>आपातकालीन सेवा</div>
+        <div class="stat-label">आपातकालीन सेवा</div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- SERVICES / FACILITIES (3 photo strip) -->
-    <section class="card" id="facility">
-      <h2 class="section-title">हमारी चिकित्सा एवं सुविधाएं</h2>
-      <p>अत्याधुनिक सुविधाएं, योग्य डॉक्टर, और तेज़ उपचार हेतु साफ-सुथरा वातानुकूलित उपचार कक्ष।</p>
+  <!-- 🧑‍⚕️ SERVICES / सुविधाएं (ब्रॉड फोटो strip) -->
+  <section class="card" id="services">
+    <h2 class="section-title">हमारी चिकित्सा एवं सुविधाएं</h2>
+    <p class="section-intro">
+      अत्याधुनिक सुविधाएं, योग्य डॉक्टर, और तेज उपचार हेतु साफ-सुथरा वातानुकूलित उपचार कक्ष।
+    </p>
 
-      <div class="facility-photos">
-        <div class="facility-item">
-          <img src="IMG_20251201_114319.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार" />
-          <div class="facility-caption">अस्पताल का बाहरी प्रवेश द्वार</div>
-        </div>
-        <div class="facility-item">
-          <img src="IMG_20251201_114316.jpg" alt="दवाइयों की दुकान एवं स्टोर" />
-          <div class="facility-caption">दवाइयों की दुकान एवं स्टोर</div>
-        </div>
-        <div class="facility-item">
-          <img src="IMG_20251201_114258.jpg" alt="अंदर का उपचार कक्ष" />
-          <div class="facility-caption">अंदर का उपचार कक्ष</div>
-        </div>
+    <div class="facility-photos">
+      <div class="facility-item">
+        <img src="IMG_20251201_114319.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार" />
+        <div class="facility-caption">अस्पताल का बाहरी प्रवेश द्वार</div>
       </div>
-    </section>
-
-    <!-- HOSPITAL PHOTO GALLERY -->
-    <section class="card" id="gallery">
-      <h2 class="section-title">अस्पताल फोटो गैलरी</h2>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <img src="IMG_20251201_114319.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार" />
-          <div class="gallery-caption">अस्पताल का बाहरी प्रवेश द्वार</div>
-        </div>
-        <div class="gallery-item">
-          <img src="IMG_20251201_114316.jpg" alt="दवाइयों की दुकान एवं स्टोर" />
-          <div class="gallery-caption">दवाइयों की दुकान एवं स्टोर</div>
-        </div>
-        <div class="gallery-item">
-          <img src="IMG_20251201_114258.jpg" alt="अंदर का उपचार कक्ष" />
-          <div class="gallery-caption">अंदर का उपचार कक्ष</div>
-        </div>
+      <div class="facility-item">
+        <img src="IMG_20251201_114316.jpg" alt="दवाइयों की दुकान एवं स्टोर" />
+        <div class="facility-caption">दवाइयों की दुकान एवं स्टोर</div>
       </div>
-    </section>
+      <div class="facility-item">
+        <img src="IMG_20251201_114258.jpg" alt="अंदर का उपचार कक्ष" />
+        <div class="facility-caption">अंदर का उपचार कक्ष</div>
+      </div>
+    </div>
+  </section>
 
-    <!-- CONTACT (About se upar) -->
-    <section class="card" id="contact-us">
-      <h2 class="section-title">Contact Us / ऑनलाइन अपॉइंटमेंट</h2>
-      <p>
-        पता: अशोक कॉलोनी के ठीक सामने, NH-139, नपतानियां पानी टंकी, ओबरा, औरंगाबाद, बिहार – 824124<br />
-        मोबाइल:
-        <a href="tel:+919771737437">+91 97717 37437</a>,
-        <a href="tel:+918210606911">+91 82106 06911</a><br />
-        कॉल या फॉर्म भरने पर आपका कॉल वापस किया जाएगा।
-      </p>
+  <!-- 🖼 GALLERY (अब MAP से ऊपर) -->
+  <section class="card" id="gallery">
+    <h2 class="section-title">अस्पताल फोटो गैलरी</h2>
+    <div class="gallery-grid">
+      <div class="gallery-item">
+        <img src="IMG_20251201_114319.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार" />
+        <div class="gallery-caption">अस्पताल का बाहरी प्रवेश द्वार</div>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG_20251201_114316.jpg" alt="दवाइयों की दुकान एवं स्टोर" />
+        <div class="gallery-caption">दवाइयों की दुकान एवं स्टोर</div>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG_20251201_114258.jpg" alt="अंदर का उपचार कक्ष" />
+        <div class="gallery-caption">अंदर का उपचार कक्ष</div>
+      </div>
+    </div>
+  </section>
 
-      <form id="appointmentForm" style="margin-top:12px;">
-        <label for="name">👤 रोगी का नाम*</label><br />
-        <input id="name" name="name" type="text" placeholder="रोगी का नाम" required />
+  <!-- 📨 CONTACT + APPOINTMENT FORM -->
+  <section class="card" id="contact">
+    <h2 class="section-title">Contact Us / ऑनलाइन अपॉइंटमेंट</h2>
+    <div class="two-col">
+      <!-- LEFT: contact info -->
+      <div class="contact-info">
+        <p>
+          <strong>पता:</strong> अहलेश कॉलोनी के ठीक सामने, NH-139, जवाहरनगर पानी टंकी,
+          ओबरा, औरंगाबाद, बिहार – 824124
+        </p>
+        <p>
+          <strong>मोबाइल:</strong>
+          <a href="tel:+919771737437">+91 97717 37437</a>,
+          <a href="tel:+918210606911">+91 82106 06911</a>
+        </p>
+        <p class="small-note">कॉल या फॉर्म भरने पर आपका कॉल वापस किया जाएगा।</p>
+      </div>
 
-        <label for="phone">📞 मोबाइल नंबर*</label><br />
-        <input id="phone" name="phone" type="tel" placeholder="10 अंकों का मोबाइल नंबर" required />
+      <!-- RIGHT: form -->
+      <form id="appointmentForm" class="appointment-form">
+        <label for="name">रोगी का नाम*</label>
+        <input id="name" name="name" type="text" required placeholder="रोगी का नाम" />
 
-        <label for="date">📅 पसंदीदा तिथि</label><br />
+        <label for="phone">📱 मोबाइल नंबर*</label>
+        <input id="phone" name="phone" type="tel" required placeholder="10 अंकों का मोबाइल नंबर" />
+
+        <label for="date">📅 पसंदीदा तिथि</label>
         <input id="date" name="date" type="date" />
 
-        <label for="problem">📝 समस्या</label><br />
-        <textarea id="problem" name="problem" rows="3"
-          placeholder="संक्षेप में समस्या लिखें (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"></textarea>
+        <label for="problem">📝 समस्या</label>
+        <textarea
+          id="problem"
+          name="problem"
+          rows="3"
+          placeholder="संक्षेप में समस्या लिखें (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"
+        ></textarea>
 
-        <button type="submit" class="btn-primary" style="width:100%;margin-top:6px;">
-          📩 अपॉइंटमेंट भेजें
-        </button>
-
+        <button type="submit" class="btn-primary full-width">📩 अपॉइंटमेंट भेजें</button>
         <p class="small-note">
-          फॉर्म भरने के बाद आपका कॉल वापस किया जाएगा और समय की पुष्टि की जाएगी।
+          फॉर्म भरने के बाद आपका कॉल किया जाएगा और समय की पुष्टि की जाएगी।
         </p>
       </form>
-    </section>
+    </div>
+  </section>
 
-    <!-- ABOUT US (Contact ke niche) -->
-    <section class="card" id="about-us">
-      <h2 class="section-title">About Us – हमारा अस्पताल</h2>
-      <p>
-        हमारा अस्पताल लकवा (पैरालिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि के इलाज हेतु
-        अनुभवी डॉक्टर की देखरेख में आधुनिक उपकरणों से उपचार प्रदान करता है।
-      </p>
-      <p style="margin-top:6px;">
-        मरीजों तथा साथ आने वाले परिजनों के लिए साफ-सुथरा, व्यवस्थित एवं वातानुकूलित इंतज़ाम किया गया है,
-        ताकि इलाज के साथ-साथ आराम भी मिल सके।
-      </p>
-      <div class="about-points">
-        ✔ लकवा एवं नसों का विशेष उपचार<br />
-        ✔ आधुनिक उपकरण एवं सुविधाएं<br />
-        ✔ आपातकालीन सेवा 24×7<br />
-        ✔ प्रशिक्षित एवं अनुभवी स्टाफ
-      </div>
-    </section>
+  <!-- ℹ️ ABOUT US -->
+  <section class="card" id="about">
+    <h2 class="section-title">About Us – हमारा अस्पताल</h2>
+    <p>
+      हमारा अस्पताल लकवा (पैरालिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमजोरी,
+      दर्द आदि से संबंधित विशेष उपचार प्रदान करता है।
+    </p>
+    <p>
+      यहाँ पर लकवा एवं नसों का विशेष उपचार आधुनिक उपकरणों एवं अनुभवी डॉक्टर की देखरेख में
+      कराया जाता है, ताकि रोगियों को बेहतर और सुरक्षित उपचार मिल सके।
+    </p>
+    <ul class="bullet-list">
+      <li>✔ लकवा एवं नसों का विशेष उपचार</li>
+      <li>✔ आधुनिक उपकरण एवं सुविधाएं</li>
+      <li>✔ आपातकालीन सेवा 24×7</li>
+      <li>✔ प्रशिक्षित एवं अनुभवी स्टाफ</li>
+    </ul>
+  </section>
 
-    <!-- PRIVACY POLICY -->
-    <section class="card" id="privacy-policy">
-      <h2 class="section-title">Privacy Policy (गोपनीयता नीति)</h2>
-      <p>
-        इस वेबसाइट पर प्राप्त जानकारी केवल अपॉइंटमेंट एवं स्वास्थ्य सम्बन्धित सलाह हेतु प्रयुक्त की जाती है।
-        आपकी अनुमति के बिना आपकी व्यक्तिगत जानकारी किसी तीसरे पक्ष के साथ साझा नहीं की जाएगी।
-      </p>
-    </section>
+  <!-- 🔐 PRIVACY POLICY -->
+  <section class="card" id="privacy-policy">
+    <h2 class="section-title">Privacy Policy (गोपनीयता नीति)</h2>
+    <p>
+      इस वेबसाइट पर प्राप्त जानकारी केवल आपकी स्वास्थ्य सम्बन्धी सलाह एवं अपॉइंटमेंट हेतु
+      उपयोग की जाती है। आपकी अनुमति के बिना आपकी व्यक्तिगत जानकारी किसी तीसरे पक्ष के साथ
+      साझा नहीं की जाएगी।
+    </p>
+  </section>
 
-    <!-- DISCLAIMER -->
-    <section class="card" id="disclaimer">
-      <h2 class="section-title">Disclaimer (अस्वीकरण)</h2>
-      <p>
-        इस वेबसाइट पर दी गई जानकारी सामान्य सूचना के उद्देश्य से है। किसी भी रोग के निदान या उपचार के लिए केवल
-        वेबसाइट पर दी गई जानकारी पर निर्भर न रहें, हमेशा डॉक्टर से सीधे परामर्श लें।
-      </p>
-    </section>
+  <!-- ⚠️ DISCLAIMER -->
+  <section class="card" id="disclaimer">
+    <h2 class="section-title">Disclaimer (अस्वीकरण)</h2>
+    <p>
+      इस वेबसाइट पर दी गई जानकारी सामान्य स्वास्थ्य सुझाव के उद्देश्य से है। किसी भी निदान या
+      उपचार के लिए कृपया सीधे डॉक्टर से संपर्क करें। केवल वेबसाइट पर दी गई जानकारी के आधार पर
+      उपचार न करें।
+    </p>
+  </section>
 
-    <!-- MAP: footer ke bilkul upar -->
-    <section class="card" id="map">
-      <h2 class="section-title">हमारा स्थान (Google Map)</h2>
-      <p>अशोक कॉलोनी के ठीक सामने, NH-139, नपतानियां पानी टंकी, ओबरा, औरंगाबाद, बिहार – 824124</p>
+  <!-- 🗺 LOCATION / MAP (अब सबसे अंत में, footer के ऊपर) -->
+  <section class="card" id="location">
+    <h2 class="section-title">हमारा स्थान (Google Map)</h2>
+    <p class="small-note">
+      पता: अहलेश कॉलोनी के ठीक सामने, NH-139, ओबरा, औरंगाबाद, बिहार – 824124
+    </p>
+    <div class="map-wrap">
       <iframe
-        class="map-frame"
-        src="https://www.google.com/maps?q=Obra%20Aurangabad%20Bihar&output=embed"
-        height="260"
-        allowfullscreen=""
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3621.3451244!2d84.3813424!3d24.7341231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398d2ea42b30c3b1%3A0x0!2sObra%2C%20Bihar!5e0!3m2!1sen!2sin!4v1700000000000"
+        style="border:0;"
         loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
-    </section>
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
+  </section>
 
-  </main>
-
-  <!-- FOOTER – BLACK -->
-  <footer>
+  <!-- ⚫ FOOTER -->
+  <footer class="site-footer">
     <div class="footer-links">
-      <a href="#about-us">About Us</a>
-      <a href="#contact-us">Contact Us</a>
+      <a href="#about">About Us</a>
+      <a href="#contact">Contact Us</a>
       <a href="#privacy-policy">Privacy Policy</a>
       <a href="#disclaimer">Disclaimer</a>
     </div>
-    <p>© 2025 Lakwa Hospital, Obra Bihar</p>
-    <p>Designed &amp; Developed by Prince Kumar</p>
+    <p class="footer-copy">
+      © 2025 Lakwa Hospital, Obra Bihar • Designed &amp; Developed by Prince Kumar
+    </p>
   </footer>
 
+  <script src="main.js"></script>
 </body>
 </html>
