--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lakwa Hospital Obra - लकवा अस्पताल, डॉ. चंदन कुमार | Obra Aurangabad Bihar</title>
 
-    <meta name="description" content="Lakwa Hospital Obra, Dr. Chandan Kumar - लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना आदि के लिए विशेष उपचार। आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष, अनुभवी डॉक्टर एवं 24x7 आपातकालीन सेवाएं।" />
+    <meta name="description" content="Lakwa Hospital Obra, Dr. Chandan Kumar - लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना एवं न्यूरो सम्बंधित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।" />
     <meta name="keywords" content="Lakwa Hospital Obra, लकवा अस्पताल ओबरा, Dr Chandan Kumar Obra, paralysis treatment Obra, neuro hospital Obra Aurangabad Bihar" />
     <meta name="robots" content="index, follow" />
 
-    <!-- JSON-LD (आप चाहें तो बाद में अपने हिसाब से बदल सकते हैं) -->
+    <!-- JSON-LD (SEO) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -145,7 +145,7 @@
             </div>
         </section>
 
-        <!-- SERVICES / FACILITIES (TOP STRIP) -->
+        <!-- SERVICES / FACILITIES STRIP -->
         <section id="services" class="card">
             <div class="container">
                 <h2 class="section-title">हमारी चिकित्सा एवं सुविधाएं</h2>
@@ -172,41 +172,11 @@
             </div>
         </section>
 
-        <!-- GALLERY (THUMBNAILS) -->
-        <section id="gallery" class="card">
-            <div class="container">
-                <h2 class="section-title">अस्पताल फोटो गैलरी</h2>
-
-                <div class="gallery-grid">
-                    <div class="gallery-item">
-                        <div class="gallery-img-wrap">
-                            <img src="IMG_20251201_114319.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार">
-                        </div>
-                        <p class="gallery-caption">अस्पताल का बाहरी प्रवेश द्वार</p>
-                    </div>
-
-                    <div class="gallery-item">
-                        <div class="gallery-img-wrap">
-                            <img src="IMG_20251201_114256.jpg" alt="दवाईयों की दुकान एवं स्टोर">
-                        </div>
-                        <p class="gallery-caption">दवाईयों की दुकान एवं स्टोर</p>
-                    </div>
-
-                    <div class="gallery-item">
-                        <div class="gallery-img-wrap">
-                            <img src="IMG_20251201_114258.jpg" alt="अंदर का उपचार कक्ष">
-                        </div>
-                        <p class="gallery-caption">अंदर का उपचार कक्ष</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- CONTACT / APPOINTMENT FORM -->
+        <!-- CONTACT / APPOINTMENT (अब services के नीचे) -->
         <section id="contact-us" class="card">
             <div class="container two-col">
-                <!-- LEFT -->
-                <div class="contact-info">
+                <!-- LEFT INFO BOX -->
+                <div class="contact-info contact-info-box">
                     <h2 class="section-title">Contact Us / ऑनलाइन अपॉइंटमेंट</h2>
                     <p><strong>पता:</strong> अशोक कॉलोनी के ठीक सामने, NH-139, जवाहर नगर पानी टंकी, ओबरा, औरंगाबाद, बिहार – 824124</p>
                     <p>
@@ -217,7 +187,7 @@
                     </p>
                 </div>
 
-                <!-- RIGHT: FORM -->
+                <!-- RIGHT FORM -->
                 <div class="contact-form-wrap">
                     <form id="appointmentForm" class="appointment-form">
                         <label for="name">रोगी का नाम*</label>
@@ -282,6 +252,36 @@
             </div>
         </section>
 
+        <!-- GALLERY (अब disclaimer के नीचे, map के ऊपर) -->
+        <section id="gallery" class="card">
+            <div class="container">
+                <h2 class="section-title">अस्पताल फोटो गैलरी</h2>
+
+                <div class="gallery-grid">
+                    <div class="gallery-item">
+                        <div class="gallery-img-wrap">
+                            <img src="IMG_20251201_114319.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार">
+                        </div>
+                        <p class="gallery-caption">अस्पताल का बाहरी प्रवेश द्वार</p>
+                    </div>
+
+                    <div class="gallery-item">
+                        <div class="gallery-img-wrap">
+                            <img src="IMG_20251201_114256.jpg" alt="दवाईयों की दुकान एवं स्टोर">
+                        </div>
+                        <p class="gallery-caption">दवाईयों की दुकान एवं स्टोर</p>
+                    </div>
+
+                    <div class="gallery-item">
+                        <div class="gallery-img-wrap">
+                            <img src="IMG_20251201_114258.jpg" alt="अंदर का उपचार कक्ष">
+                        </div>
+                        <p class="gallery-caption">अंदर का उपचार कक्ष</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- MAP / LOCATION -->
         <section id="location" class="card">
             <div class="container">
@@ -289,8 +289,7 @@
                 <p>पता: अशोक कॉलोनी के ठीक सामने, NH-139, जवाहर नगर पानी टंकी, ओबरा, औरंगाबाद, बिहार – 824124</p>
 
                 <div class="map-wrap">
-                    <!-- ⚠️ यहाँ पर अपना ORIGINAL Google Maps iframe लगा दीजिए
-                         अभी के लिए placeholder दिया है, आप src को अपनी पुरानी working link से बदल दें -->
+                    <!-- यहाँ अपना सही Google Maps embed डालें -->
                     <iframe
                         src="YOUR_GOOGLE_MAPS_EMBED_URL_HERE"
                         style="border:0;"
