--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <section class="card" id="location">
       <h2 class="section-title">हमारा स्थान (Google Map)</h2>
       <p class="section-text">
-        पता: अशोक कॉलोनी के ठीक सामने, NH-139, जवाहर नगर पानी टंकी, ओबरा, औरंगाबाद, बिहार – 824124
+        पता: नियर पानी टंकी ओबरा ब्लॉक के सामने NH -139 ओबरा औरंगाबाद बिहार 824124
       </p>
 
       <div class="map-wrapper">
