--- a/index.html
+++ b/index.html
@@ -313,12 +313,17 @@
         पता: नियर पानी टंकी ओबरा ब्लॉक के सामने NH -139 ओबरा औरंगाबाद बिहार 824124
       </p>
 
-      <div class="map-wrapper">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3621.345!2d84.324!3d24.741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zTGF3YSBIb3NwaXRhbCBPYnJh!5e0!3m2!1sen!2sin!4v1700000000000"
-          width="100%" height="380" style="border:0;" allowfullscreen=""
-          loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
+<div class="map-wrapper">
+<iframe 
+  src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3619.3592429845307!2d84.36522807537169!3d24.88572497791284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDUzJzA4LjYiTiA4NMKwMjInMDQuMSJF!5e0!3m2!1sen!2sin!4v1764600183480!5m2!1sen!2sin" 
+  width="100%" 
+  height="350" 
+  style="border:0; border-radius:12px;" 
+  allowfullscreen="" 
+  loading="lazy" 
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+</div>
     </section>
   </main>
 
