--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="two-col-left">
         <h2 class="section-title">Contact Us / ऑनलाइन अपॉइंटमेंट</h2>
         <p class="section-text">
-          पता: अशोक कॉलोनी के ठीक सामने, NH-139, जवाहर नगर पानी टंकी, ओबरा, औरंगाबाद, बिहार – 824124
+          पता: नियर पानी टंकी ओबरा ब्लॉक के सामने NH -139 ओबरा औरंगाबाद बिहार 824124
         </p>
         <p class="section-text">
           <strong>मोबाइल:</strong>
