--- a/index.html
+++ b/index.html
@@ -5,57 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Lakwa Hospital Obra – लकवा अस्पताल, ओबरा (औरंगाबाद, बिहार)</title>
-  <meta name="description" content="Lakwa Hospital Obra – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि के इलाज के लिए विशेष लकवा अस्पताल। नियर पानी टंकी ओबरा ब्लॉक के सामने NH-139 ओबरा, औरंगाबाद, बिहार - 824124. 24×7 सुविधा उपलब्ध।" />
 
-  <link rel="canonical" href="https://princekumaroBra.github.io/" />
+  <meta name="description"
+        content="Lakwa Hospital Obra – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि के लिए विशेष उपचार। 24×7 आपातकालीन सुविधा, BP, Sugar, Blood Test एवं अन्य जांच उपलब्ध।" />
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <meta name="keywords"
+        content="Lakwa Hospital, Lakwa Aspatal, लकवा अस्पताल, Obra Hospital, Aurangabad Bihar Hospital, doctor Chandana Kumar" />
 
-  <!-- SEO: Hospital Schema -->
+  <!-- Open Graph / Social -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Lakwa Hospital Obra – लकवा अस्पताल" />
+  <meta property="og:description"
+        content="लकवा एवं नसों से संबंधित रोगों के लिए विशेष उपचार, BP, Sugar, Blood Test एवं 24×7 आपातकालीन सेवा।" />
+
+  <link rel="icon" type="image/png" href="doctorphoto.png" />
+
+  <!-- Hospital Schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Hospital",
     "name": "Lakwa Hospital Obra",
-    "description": "लकवा, नसों की बीमारियाँ, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि के लिए विशेष लकवा अस्पताल।",
-    "telephone": "+91-97717-37437",
+    "description": "लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना एवं न्यूरो से संबंधित रोगों के लिए विशेष उपचार।",
+    "url": "https://princekumarobra.github.io",
+    "telephone": ["+919771737437", "+918210606911"],
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "नियर पानी टंकी, ओबरा ब्लॉक के सामने, NH-139",
+      "streetAddress": "नियर पानी टंकी, ओबरा ब्लॉक के सामने NH-139",
       "addressLocality": "ओबरा",
-      "addressRegion": "बिहार",
-      "postalCode": "824124",
-      "addressCountry": "IN"
+      "addressRegion": "औरंगाबाद",
+      "addressCountry": "IN",
+      "postalCode": "824124"
     },
     "geo": {
       "@type": "GeoCoordinates",
-      "latitude": 24.8857249,
-      "longitude": 84.3652280
+      "latitude": 24.885725,
+      "longitude": 84.367806
     },
-    "openingHoursSpecification": [{
-      "@type": "OpeningHoursSpecification",
-      "dayOfWeek": [
-        "Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
-      ],
-      "opens": "00:00",
-      "closes": "23:59"
-    }]
+    "openingHours": "Mo-Su 00:00-23:59"
   }
   </script>
 
-  <!-- JS -->
-  <script defer src="main.js"></script>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- TOP EMERGENCY STRIP -->
-  <div class="top-strip">
-    <div class="container top-strip-inner">
-      <div class="top-strip-text">
-        <strong>Lakwa Hospital Obra</strong> – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)
+  <!-- TOP EMERGENCY BAR -->
+  <div class="top-bar">
+    <div class="container top-bar-inner">
+      <div class="top-bar-text">
+        Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)
       </div>
-      <a href="tel:+919771737437" class="top-strip-phone">
+      <a class="top-bar-phone" href="tel:+919771737437">
         +91 97717 37437
       </a>
     </div>
@@ -64,75 +65,84 @@
   <!-- HEADER + NAV -->
   <header class="site-header">
     <div class="container header-inner">
+      <!-- Logo -->
       <div class="logo-area">
         <div class="logo-3d">
           <span class="logo-text-main">LH</span>
         </div>
         <div class="logo-text-block">
-          <div class="logo-title">Lakwa Hospital Obra</div>
+          <div class="logo-title">Lakwa Hospital</div>
           <div class="logo-subtitle">Obra, Bihar</div>
         </div>
       </div>
 
+      <!-- Desktop Nav -->
       <nav class="main-nav">
-        <ul>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li><a href="#contact">Contact Us</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#privacy">Privacy Policy</a></li>
-          <li><a href="#disclaimer">Disclaimer</a></li>
-          <li><a href="#location">Location</a></li>
-        </ul>
+        <a href="#services">Services</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#contact">Contact Us</a>
+        <a href="#about">About Us</a>
+        <a href="#privacy">Privacy Policy</a>
+        <a href="#disclaimer">Disclaimer</a>
+        <a href="#location">Location</a>
       </nav>
 
-      <!-- Mobile menu button -->
-      <button class="menu-toggle" aria-label="Toggle navigation">
+      <!-- Mobile Menu Button -->
+      <button class="nav-toggle" aria-label="Toggle navigation">
         <span></span>
         <span></span>
         <span></span>
       </button>
     </div>
+
+    <!-- Mobile Nav Dropdown -->
+    <nav class="mobile-nav">
+      <a href="#services">Services</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#contact">Contact Us</a>
+      <a href="#about">About Us</a>
+      <a href="#privacy">Privacy Policy</a>
+      <a href="#disclaimer">Disclaimer</a>
+      <a href="#location">Location</a>
+    </nav>
   </header>
 
   <main>
-    <!-- HERO SECTION -->
+    <!-- HERO / DOCTOR SECTION -->
     <section class="hero">
       <div class="container hero-inner">
-        <div class="hero-photo">
-          <div class="doctor-photo-ring">
-            <img src="doctorphoto.png" alt="डॉ. चंदन कुमार - Lakwa Hospital Obra" />
+        <div class="hero-left">
+          <div class="doctor-photo-wrapper">
+            <img src="doctorphoto.png" alt="डॉ. चंदन कुमार" class="doctor-photo" />
           </div>
-        </div>
-        <div class="hero-content">
-          <h1 class="hero-title">लकवा अस्पताल</h1>
-          <h2 class="hero-subtitle">डॉ. चंदन कुमार</h2>
+
+          <h1 class="hospital-name">लकवा अस्पताल</h1>
+          <h2 class="doctor-name">डॉ. चंदन कुमार</h2>
 
           <p class="hero-text">
-            M.B.E.H (Patna) – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना तथा न्यूरो सम्बन्धित
-            रोगों की विशेष देखरेख 24 घंटे उपलब्ध।
+            M.B.E.H (Patna) – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना तथा न्यूरो सम्बंधित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।
           </p>
 
           <p class="hero-text">
-            लकवा तथा नसों से सम्बन्धित रोगों के लिए विशेष उपचार व्यवस्था, आधुनिक उपकरण, साफ-सुथरा
-            वातानुकूलित कक्ष, मरीज़ एवं साथ-आने वाले परिजनों के लिए सुव्यवस्थित व्यवस्था।
+            लकवा तथा नसों से संबंधित रोगों के लिए विशेष उपचार व्यवस्था, आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष,
+            मरीज एवं साथ-आने वाले परिजनों के लिए सुविधाजनक व्यवस्था।
           </p>
 
           <ul class="hero-points">
-            <li>विशेष लकवा उपचार</li>
-            <li>अनुभवी डॉक्टर</li>
-            <li>आपातकालीन सुविधाएँ 24×7</li>
+            <li>✔ विशेष लकवा उपचार</li>
+            <li>✔ अनुभवी डॉक्टर</li>
+            <li>✔ आपातकालीन सुविधाएं</li>
           </ul>
 
-          <div class="hero-actions">
-            <a href="tel:+919771737437" class="btn btn-primary">📞 अभी कॉल करें</a>
-            <a href="#contact" class="btn btn-outline">📅 ऑनलाइन अपॉइंटमेंट बुक करें</a>
+          <div class="hero-buttons">
+            <a class="btn btn-call" href="tel:+919771737437">अभी कॉल करें</a>
+            <a class="btn btn-outline" href="#contact">ऑनलाइन अपॉइंटमेंट बुक करें</a>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- STATS SECTION -->
+    <!-- STATS / HIGHLIGHTS -->
     <section class="stats" id="services">
       <div class="container stats-grid">
         <div class="stats-card">
@@ -153,21 +163,44 @@
       </div>
     </section>
 
-    <!-- FACILITIES / TREATMENTS -->
+    <!-- FACILITIES / TREATMENT -->
     <section class="card" id="facility">
       <div class="container">
         <h2 class="section-title">हमारी चिकित्सा एवं सुविधाएं</h2>
         <p class="section-text">
           अत्याधुनिक सुविधाएं, योग्य डॉक्टर, और तेज़ उपचार हेतु साफ-सुथरा वातानुकूलित उपचार कक्ष।
         </p>
+
         <ul class="facility-list">
-          <li>BP Check (ब्लड प्रेशर जांच)</li>
-          <li>Pulse Check (नाड़ी जांच)</li>
-          <li>Sugar Check (ब्लड शुगर जांच)</li>
-          <li>Blood Test (विभिन्न रक्त परीक्षण)</li>
-          <li>Fever Check एवं सामान्य जाँच</li>
-          <li>लकवा एवं नसों से संबंधित विशेष उपचार</li>
+          <li>लकवा एवं नसों का विशेष उपचार</li>
+          <li>आधुनिक उपकरण एवं सुविधाएं</li>
+          <li>आपातकालीन सेवा 24×7</li>
+          <li>प्रशिक्षित एवं अनुभवी स्टाफ</li>
         </ul>
+
+        <!-- CHECKUP ICON CARDS -->
+        <div class="checkup-grid">
+          <div class="checkup-card">
+            <div class="checkup-icon">🩺</div>
+            <div>BP Check<br><small>ब्लड प्रेशर जांच</small></div>
+          </div>
+          <div class="checkup-card">
+            <div class="checkup-icon">❤️</div>
+            <div>Pulse Check<br><small>नाड़ी जांच</small></div>
+          </div>
+          <div class="checkup-card">
+            <div class="checkup-icon">🍬</div>
+            <div>Sugar Check<br><small>ब्लड शुगर जांच</small></div>
+          </div>
+          <div class="checkup-card">
+            <div class="checkup-icon">🧪</div>
+            <div>Blood Test<br><small>विभिन्न रक्त परीक्षण</small></div>
+          </div>
+          <div class="checkup-card">
+            <div class="checkup-icon">🌡️</div>
+            <div>Fever Check<br><small>बुखार एवं सामान्य जांच</small></div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -177,59 +210,59 @@
         <div class="contact-info">
           <h2 class="section-title">Contact Us / ऑनलाइन अपॉइंटमेंट</h2>
           <p class="section-text">
-            पता: <strong>नियर पानी टंकी ओबरा ब्लॉक के सामने, NH-139, ओबरा, औरंगाबाद, बिहार – 824124</strong>
+            पता: नज़दीक पानी टंकी ओबरा ब्लॉक के सामने NH-139, ओबरा, औरंगाबाद, बिहार – 824124
           </p>
           <p class="section-text">
             मोबाइल: <a href="tel:+919771737437">+91 97717 37437</a>,
             <a href="tel:+918210606911">+91 82106 06911</a><br />
-            कॉल या फॉर्म भरने पर आपका कॉल वापस किया जाएगा।
+            कॉल या फ़ॉर्म भरने पर आपका कॉल वापस किया जाएगा।
           </p>
         </div>
 
         <form class="contact-form">
-          <div class="form-group">
-            <label for="name">रोगी का नाम*</label>
-            <input type="text" id="name" placeholder="रोगी का नाम" required />
-          </div>
+          <label>
+            रोगी का नाम*
+            <input type="text" placeholder="रोगी का नाम" required />
+          </label>
 
-          <div class="form-group">
-            <label for="phone">मोबाइल नंबर*</label>
-            <input type="tel" id="phone" placeholder="10 अंकों का मोबाइल नंबर" required />
-          </div>
+          <label>
+            मोबाइल नंबर*
+            <input type="tel" placeholder="10 अंकों का मोबाइल नंबर" required />
+          </label>
 
-          <div class="form-group">
-            <label for="date">पसंदीदा तिथि</label>
-            <input type="date" id="date" />
-          </div>
+          <label>
+            पसंदीदा तिथि
+            <input type="date" />
+          </label>
 
-          <div class="form-group">
-            <label for="problem">समस्या</label>
-            <textarea id="problem" rows="3"
-              placeholder="संक्षेप में समस्या लिखें (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"></textarea>
-          </div>
+          <label>
+            समस्या
+            <textarea rows="3" placeholder="संक्षेप में समस्या लिखें (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"></textarea>
+          </label>
 
-          <button type="submit" class="btn btn-primary btn-full">अपॉइंटमेंट भेजें</button>
+          <button type="submit" class="btn btn-full">अपॉइंटमेंट भेजें</button>
+
           <p class="form-note">
-            फॉर्म भरने के बाद आपका कॉल वापस किया जाएगा, और समय की पुष्टि की जाएगी।
+            फ़ॉर्म भरने के बाद आपका कॉल वापस किया जाएगा, और समय की पुष्टि की जाएगी।
           </p>
         </form>
       </div>
     </section>
 
-    <!-- ABOUT US -->
+    <!-- ABOUT -->
     <section class="card" id="about">
       <div class="container">
         <h2 class="section-title">About Us – हमारा अस्पताल</h2>
         <p class="section-text">
-          हमारा अस्पताल लकवा (पैरालिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि से
-          सम्बन्धित विशेष उपचार प्रदान करता है। डॉ. चंदन कुमार द्वारा आधुनिक उपकरणों और अनुभवी टीम की देखरेख में
-          उपचार किया जाता है, ताकि रोगियों को बेहतर और सुरक्षित सेवा प्राप्त हो सके।
+          हमारा अस्पताल लकवा (पैरालिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि से संबंधित विशेष
+          उपचार प्रदान करता है। डॉ. चंदन कुमार द्वारा आधुनिक उपकरणों और अनुभवी टीम की देखरेख में उपचार किया जाता है,
+          ताकि रोगियों को बेहतर और सुरक्षित सेवा प्राप्त हो सके।
         </p>
-        <ul class="section-list">
-          <li>लकवा एवं नसों का विशेष उपचार</li>
-          <li>आधुनिक उपकरण एवं सुविधाएं</li>
-          <li>आपातकालीन सेवा 24×7</li>
-          <li>प्रशिक्षित एवं अनुभवी स्टाफ</li>
+        <ul class="facility-list">
+          <li>✔ लकवा एवं नसों का विशेष उपचार</li>
+          <li>✔ आधुनिक उपकरण एवं सुविधाएं</li>
+          <li>✔ आपातकालीन सेवा 24×7</li>
+          <li>✔ प्रशिक्षित एवं अनुभवी स्टाफ</li>
         </ul>
       </div>
     </section>
@@ -240,7 +273,7 @@
         <h2 class="section-title">Privacy Policy (गोपनीयता नीति)</h2>
         <p class="section-text">
           इस वेबसाइट पर प्राप्त जानकारी केवल आपकी अपॉइंटमेंट सुविधा एवं स्वास्थ्य सम्बन्धी सलाह हेतु प्रयोग की जाती है।
-          आपकी अनुमति के बिना आपकी व्यक्तिगत जानकारी किसी तीसरे पक्ष के साथ साझा नहीं की जाएगी।
+          आपकी अनुमति के बिना आपकी व्यक्तिगत जानकारी किसी तृतीय पक्ष के साथ साझा नहीं की जाएगी।
         </p>
       </div>
     </section>
@@ -250,49 +283,47 @@
       <div class="container">
         <h2 class="section-title">Disclaimer (अस्वीकरण)</h2>
         <p class="section-text">
-          इस वेबसाइट पर दी गई जानकारी सामान्य जागरूकता के उद्देश्य से है। किसी भी निदान या उपचार के लिए हमेशा डॉक्टर से
-          प्रत्यक्ष परामर्श लें। वेबसाइट पर दी गई जानकारी के आधार पर स्वयं उपचार शुरू करना उचित नहीं है।
+          इस वेबसाइट पर दी गई जानकारी सामान्य जागरूकता के उद्देश्य से है। किसी भी उपचार या निर्णय के लिए हमेशा डॉक्टर से प्रत्यक्ष
+          परामर्श लें। वेबसाइट पर दी गई जानकारी के आधार पर स्वयं उपचार करना उचित नहीं है।
         </p>
       </div>
     </section>
 
     <!-- HOSPITAL PHOTO GALLERY -->
     <section class="card gallery-card" id="gallery">
-      <div class="container">
-        <h2 class="section-title">अस्पताल फोटो गैलरी</h2>
-        <div class="gallery-grid">
-          <div class="gallery-item">
-            <img src="IMG_20251201_114256.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार" />
-            <div class="gallery-caption">अस्पताल का बाहरी प्रवेश द्वार</div>
-          </div>
-          <div class="gallery-item">
-            <img src="IMG_20251201_114258.jpg" alt="दवाओं की दुकान एवं स्टोर" />
-            <div class="gallery-caption">दवाओं की दुकान एवं स्टोर</div>
-          </div>
-          <div class="gallery-item">
-            <img src="IMG_20251201_114316.jpg" alt="अंदर का उपचार कक्ष" />
-            <div class="gallery-caption">अंदर का उपचार कक्ष</div>
-          </div>
+      <h2 class="section-title">अस्पताल फोटो गैलरी</h2>
+      <div class="gallery-grid">
+        <div class="gallery-item">
+          <img src="IMG_20251201_114256.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार" />
+          <div class="gallery-caption">अस्पताल का बाहरी प्रवेश द्वार</div>
+        </div>
+        <div class="gallery-item">
+          <img src="IMG_20251201_114258.jpg" alt="दवाइयों की दुकान एवं स्टोर" />
+          <div class="gallery-caption">दवाइयों की दुकान एवं स्टोर</div>
+        </div>
+        <div class="gallery-item">
+          <img src="IMG_20251201_114316.jpg" alt="अंदर का उपचार कक्ष" />
+          <div class="gallery-caption">अंदर का उपचार कक्ष</div>
         </div>
       </div>
     </section>
 
     <!-- LOCATION / GOOGLE MAP -->
     <section class="card" id="location">
-      <div class="container">
-        <h2 class="section-title">हमारा स्थान (Google Map)</h2>
-        <p class="section-text">
-          पता: नियर पानी टंकी, ओबरा ब्लॉक के सामने, NH-139, ओबरा, औरंगाबाद, बिहार – 824124
-        </p>
-
-        <div class="map-wrapper">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3619.3592429845307!2d84.36522807537169!3d24.88572497791284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDUzJzA4LjYiTiA4NMKwMjInMDQuMSJF!5e0!3m2!1sen!2sin!4v1764600183480!5m2!1sen!2sin"
-            width="100%" height="350" style="border:0; border-radius:12px;"
-            allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
-        </div>
+      <h2 class="section-title">हमारा स्थान (Google Map)</h2>
+      <p class="section-text">
+        पता: नियर पानी टंकी ओबरा ब्लॉक के सामने NH-139 ओबरा, औरंगाबाद बिहार 824124
+      </p>
+      <div class="map-wrapper">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3619.3592429845307!2d84.36522807537169!3d24.88572497791284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDUzJzA4LjYiTiA4NMKwMjInMDQuMSJF!5e0!3m2!1sen!2sin!4v1764600183480!5m2!1sen!2sin"
+          width="100%"
+          height="350"
+          style="border:0; border-radius:12px;"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </div>
     </section>
   </main>
@@ -312,5 +343,15 @@
       </p>
     </div>
   </footer>
+
+  <!-- SIMPLE JS FOR MOBILE MENU -->
+  <script>
+    const navToggle = document.querySelector('.nav-toggle');
+    const mobileNav = document.querySelector('.mobile-nav');
+
+    navToggle.addEventListener('click', () => {
+      mobileNav.classList.toggle('open');
+    });
+  </script>
 </body>
 </html>
