--- a/index.html
+++ b/index.html
@@ -343,6 +343,22 @@
     }
   });
 </script>
+<!-- mobile menu ke liye script -->
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const toggle = document.querySelector(".nav-toggle");
+    const nav = document.querySelector(".main-nav");
 
+    if (toggle && nav) {
+      toggle.addEventListener("click", () => {
+        nav.classList.toggle("nav-open");            // class on/off
+        const expanded = toggle.getAttribute("aria-expanded") === "true";
+        toggle.setAttribute("aria-expanded", expanded ? "false" : "true");
+      });
+    }
+  });
+</script>
+</body>
+</html>
 </body>
 </html>
